# trading-stock

./: .gitignore  LICENSE  README.md  pyproject.toml
src/txf/: __init__.py
src/txf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/txf/backtest/: commission.py  engine.py  matching.py
src/txf/config/: contracts.py  settings.py
src/txf/core/: clock.py  constants.py  errors.py  events.py  types.py
src/txf/data/: feed.py  normalizer.py
src/txf/data/fetchers/: csv_loader.py
src/txf/position/: calculator.py  manager.py
src/txf/reporting/: metrics.py  trade_log.py  visualizer.py
src/txf/risk/: limits.py  manager.py  pre_trade.py  realtime.py  stops.py
src/txf/strategy/: base.py  context.py  indicators.py  signal.py
src/txf/strategy/examples/: dual_ma.py
tests/: conftest.py
tests/test_backtest/: test_engine.py  test_matching.py
tests/test_core/: test_events.py  test_types.py
tests/test_position/: test_calculator.py  test_manager.py
tests/test_reporting/: test_metrics.py
tests/test_risk/: test_pre_trade.py  test_stops.py
tests/test_strategy/: test_indicators.py
